# hstodo

./: .gitignore  hstodo.cabal  run_rest_tests.sh
snaplets/sqlite-simple/: prod.cfg  test.cfg
src/: Model.hs
src/Model/: Db.hs  Types.hs
src/Site/: Application.hs  Main.hs  Site.hs  Util.hs
src/cabal-dev/: cabal.config
static/: components.js  index.html  note-edit-partial.html  note-view-partial.html  note.js  notes-partial.html  services.js  style.css  todo.js  todos-partial.html  todos.html
test/: ModelTests.hs
test/js/rest/: todo_spec.js
