Name:                hstodo
Version:             0.1
Synopsis:            Todo web app
License:             BSD3
License-file:        LICENSE
Author:              Janne Hellsten
Maintainer:          Janne Hellsten <jjhellst@gmail.com>
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable hstodo
  default-language: Haskell2010
  hs-source-dirs: src
  main-is:        Site/Main.hs

  Build-depends:
    base                      >= 4       && < 5,
    aeson                     >= 0.6,
    bytestring                >= 0.9.1   && < 0.11,
    configurator              >= 0.2.0,
    heist                     >= 0.10    && < 0.12,
    lens                      >= 3.7.0.1 && < 3.9,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.11    && < 0.12,
    snap-core                 >= 0.9     && < 0.11,
    snap-extras               >= 0.3     && < 0.5,
    snap-server               >= 0.9     && < 0.11,
    snap-loader-static        >= 0.9     && < 0.11,
    snaplet-sqlite-simple     >= 0.4.2   && < 1.0,
    sqlite-simple             >= 0.4.1   && < 1.0,
    text                      >= 0.11    && < 0.12,
    time                      >= 1.1     && < 1.5,
    either                    >= 3       && < 4,
    errors                    >= 1.3     && < 1.5

  if flag(development)
    build-depends:
      snap-loader-dynamic >= 0.9 && < 0.11
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans


test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test, src
  main-is:          ModelTests.hs
  other-modules:    Model.Db

  build-depends:
    aeson                      >= 0.6,
    HUnit                      >= 1.2      && < 2,
    base                       >= 4        && < 5,
    bytestring                 >= 0.9      && < 0.11,
    containers                 >= 0.3,
    directory                  >= 1.0      && < 1.3,
    errors,
    lens,
    mtl                        >= 2,
    snap-core,
    snap,
    snaplet-sqlite-simple,
    sqlite-simple,
    test-framework             >= 0.6      && < 0.9,
    test-framework-hunit       >= 0.2.7    && < 0.4,
    text                       >= 0.11     && < 0.12,
    time                       >= 1.1,
    transformers               >= 0.2

  default-extensions:
    FlexibleInstances
